<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home" android:icon="@drawable/ic_nav_home" android:title="@string/nav_home" />
    <item android:id="@+id/nav_fleet" android:icon="@drawable/ic_qr_scan" android:title="@string/nav_fleet" />
    <item android:id="@+id/nav_people" android:icon="@drawable/ic_nav_people" android:title="@string/nav_people" />
    <item android:id="@+id/nav_tasks" android:icon="@drawable/ic_nav_tasks" android:title="@string/nav_tasks" />
    <item android:id="@+id/nav_sessions" android:icon="@drawable/ic_nav_sessions" android:title="@string/nav_sessions" />
    <item android:id="@+id/nav_settings" android:icon="@drawable/ic_nav_settings" android:title="@string/nav_settings" />
</menu>
