<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/people_title"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/bg_search_bar"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_search"
            app:tint="?attr/secondaryTextColor" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/nunito_medium"
            android:hint="@string/people_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="?attr/primaryTextColor"
            android:textColorHint="?attr/hintColor"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFilters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch">

        <TextView android:id="@+id/tabAll" style="@style/FilterTab"
            android:background="@drawable/bg_tab_selected"
            android:textColor="@color/white" android:text="@string/people_all" />
        <TextView android:id="@+id/tabActive" style="@style/FilterTab"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/bg_tab_unselected"
            android:textColor="@color/red_400" android:text="@string/people_active" />
        <TextView android:id="@+id/tabIdle" style="@style/FilterTab"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/bg_tab_unselected"
            android:textColor="@color/red_400" android:text="@string/people_idle" />
        <TextView android:id="@+id/tabOffline" style="@style/FilterTab"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/bg_tab_unselected"
            android:textColor="@color/red_400" android:text="@string/people_offline" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPeople"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutFilters"
        tools:listitem="@layout/item_person" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvPeople" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/people_empty"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvPeople" />
</androidx.constraintlayout.widget.ConstraintLayout>
