<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp"
            android:paddingTop="@dimen/_30sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:background="?attr/backgroundColor"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:background="@drawable/bg_tab_inactive"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_back_arrow"
                app:tint="?attr/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/session_history"
                android:textColor="?attr/primaryTextColor"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/circular_std_bold"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="@id/btnBack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/all_recordings"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/nunito_medium"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toBottomOf="@id/tvHeaderTitle" />

            <TextView
                android:id="@+id/btnBackToHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tab_inactive"
                android:paddingStart="@dimen/_12sdp" android:paddingEnd="@dimen/_12sdp"
                android:paddingTop="@dimen/_6sdp" android:paddingBottom="@dimen/_6sdp"
                android:text="@string/back_to_home"
                android:textColor="#E53935"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/nunito_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnBack"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp" android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <TextView
                android:id="@+id/tabRecent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_32sdp"
                android:background="@drawable/bg_tab_active"
                android:gravity="center"
                android:text="@string/recent"
                android:textColor="?attr/primaryTextColor"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/nunito_medium"/>

            <TextView
                android:id="@+id/tabFailed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_tab_inactive"
                android:gravity="center"
                android:text="@string/failed"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/nunito_medium"/>

            <TextView
                android:id="@+id/tabUploaded"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_32sdp"
                android:background="@drawable/bg_tab_inactive"
                android:gravity="center"
                android:text="@string/uploaded"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/nunito_medium"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSessions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/layoutEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_32sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/ic_folder_empty"
                app:tint="?attr/hintColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/no_sessions_yet"
                android:textColor="?attr/primaryTextColor"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/circular_std_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/start_recording_to_create_your"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/nunito_medium"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
